[package]
name = "maya-payment-vault-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
maya-client-sdk = { path = "../client" }
async-trait = "0.1.68"
serde_with = "3.4.0"
